--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                     <option value="439">439 Hz</option>
                     <option value="440">440 Hz</option>
                     <option value="441">441 Hz</option>
-                    <option value="442" selected>442 Hz</option> <option value="443">443 Hz</option>
+                    <option value="442" selected>442 Hz</option>
+                    <option value="443">443 Hz</option>
                     <option value="444">444 Hz</option>
                     <option value="445">445 Hz</option>
                     <option value="446">446 Hz</option>
