--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webチューナー (改良版)</title>
     <style>
-        /* (body, .tuner-container, button#startButton などのCSSは変更なし) */
+        /* (body, .tuner-container, button#startButton は変更なし) */
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             display: grid;
@@ -36,7 +36,7 @@
         }
 
 
-        /* --- ① メーター (変更あり) --- */
+        /* --- ① メーター (CSS大幅変更) --- */
         .tuner-meter {
             width: 300px;
             height: 150px;
@@ -46,30 +46,63 @@
             border-radius: 150px 150px 0 0;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 0 0 2px #ffffff; /* 中央の白線 */
+            /* 中央の線 (box-shadow) を削除 */
         }
 
-        /* ★★★ 新規追加: ① メモリ線 ★★★ */
-        .meter-marks .mark {
-            width: 1px;
-            height: 15px; /* メモリの長さ */
-            background-color: #abb2bf; /* メモリの色 */
+        /* ★★★ 新規追加: ① アーチ状のメモリ（ティック線） ★★★ */
+        .meter-arc-marks {
+            width: 100%;
+            height: 100%;
             position: absolute;
             bottom: 0;
-            left: calc(50% - 0.5px);
+            left: 0;
+        }
+        .arc-mark-tick {
+            width: 2px; /* ティックの太さ */
+            height: 15px; /* ティックの長さ */
+            background-color: #abb2bf;
+            position: absolute;
+            bottom: 135px; /* = (メーター高さ 150px) - (ティック長さ 15px) */
+            left: calc(50% - 1px);
             transform-origin: bottom center;
         }
-        /* 各メモリを回転させて配置 (-40, -20, +20, +40 セント) */
-        .mark-1 { transform: rotate(-36deg); } /* -40セント */
-        .mark-2 { transform: rotate(-18deg); } /* -20セント */
-        .mark-3 { transform: rotate(18deg);  } /* +20セント */
-        .mark-4 { transform: rotate(36deg);  } /* +40セント */
-        /* ★★★ (ここまで) ★★★ */
+
+        /* ★★★ 新規追加: ① アーチ状のメモリ（数字） ★★★ */
+        .meter-arc-numbers {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+        .arc-number-container {
+            width: 40px; /* 数字の表示エリア幅 */
+            height: 150px; /* メーターの半径 */
+            position: absolute;
+            bottom: 0;
+            left: calc(50% - 20px); /* エリア幅の半分 */
+            transform-origin: bottom center;
+        }
+        .arc-mark-number {
+            display: block;
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            top: 20px; /* 円弧の上端からの距離 */
+            color: #abb2bf;
+            font-size: 0.8rem;
+            font-weight: bold;
+            /* 親 (.arc-number-container) の回転を打ち消す
+              (インラインstyleの --un-rotate を参照) 
+            */
+            transform: rotate(var(--un-rotate, 0deg));
+        }
+
 
         /* 針 (変更なし) */
         .meter-needle {
             width: 2px;
-            height: 140px;
+            height: 140px; /* メモリより少し短く */
             background-color: #e06c75;
             position: absolute;
             bottom: 0;
@@ -77,42 +110,16 @@
             transform-origin: bottom center;
             transform: rotate(0deg);
             transition: transform 0.15s ease-out; /* この値はJS側で制御 */
+            z-index: 10; /* メモリより手前に表示 */
         }
 
-        /* --- 結果表示 (変更なし) --- */
-        #resultDisplay {
-            text-align: center;
-            height: 100px;
-        }
-        #noteNameDisplay {
-            font-size: 4rem;
-            font-weight: bold;
-            color: #98c379;
-            line-height: 1;
-        }
-        #detuneDisplay {
-            font-size: 1.5rem;
-            color: #abb2bf;
-        }
-
-        /* --- 設定 (変更あり) --- */
-        .settings {
-            display: flex;
-            gap: 20px;
-            color: #abb2bf;
-        }
-        .setting {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        select, input[type="range"] {
-            background-color: #4b5263;
-            color: white;
-            border: none;
-            padding: 5px;
-            border-radius: 5px;
-        }
+        /* (結果表示, 設定 のCSSは変更なし) */
+        #resultDisplay { ... }
+        #noteNameDisplay { ... }
+        #detuneDisplay { ... }
+        .settings { ... }
+        .setting { ... }
+        select, input[type="range"] { ... }
     </style>
 </head>
 <body>
@@ -123,12 +130,27 @@
 
         <div class="tuner-meter">
             
-            <div class="meter-marks">
-                <div class="mark mark-1"></div>
-                <div class="mark mark-2"></div>
-                <div class="mark mark-3"></div>
-                <div class="mark mark-4"></div>
+            <div class="meter-arc-marks">
+                <div class="arc-mark-tick" style="transform: rotate(-45deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-36deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-27deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-18deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-9deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(9deg);"></div>   <div class="arc-mark-tick" style="transform: rotate(18deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(27deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(36deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(45deg);"></div>  </div>
+
+            <div class="meter-arc-numbers">
+                <div class="arc-number-container" style="transform: rotate(-45deg); --un-rotate: 45deg;">
+                    <span class="arc-mark-number">-50</span>
+                </div>
+                <div class="arc-number-container" style="transform: rotate(-18deg); --un-rotate: 18deg;">
+                    <span class="arc-mark-number">-20</span>
+                </div>
+                <div class="arc-number-container" style="transform: rotate(0deg); --un-rotate: 0deg;">
+                    <span class="arc-mark-number">0</span>
+                </div>
+                <div class="arc-number-container" style="transform: rotate(18deg); --un-rotate: -18deg;">
+                    <span class="arc-mark-number">+20</span>
+                </div>
+                <div class="arc-number-container" style="transform: rotate(45deg); --un-rotate: -45deg;">
+                    <span class="arc-mark-number">+50</span>
+                </div>
             </div>
+
             <div id="meterNeedle" class="meter-needle"></div>
         </div>
 
@@ -141,22 +163,13 @@
             <div class="setting">
                 <label for="a4FreqSelect">基準ピッチ (A4)</label>
                 <select id="a4FreqSelect">
-                    <option value="438">438 Hz</option>
-                    <option value="439">439 Hz</option>
-                    <option value="440">440 Hz</option>
-                    <option value="441">441 Hz</option>
                     <option value="442" selected>442 Hz</option>
-                    <option value="443">443 Hz</option>
-                    <option value="444">444 Hz</option>
-                    <option value="445">445 Hz</option>
-                    <option value="446">446 Hz</option>
-                </select>
+                    </select>
             </div>
             <div class="setting">
                 <label for="sensitivitySlider">マイク感度 (ノイズカット)</label>
                 <input type="range" id="sensitivitySlider" min="0.01" max="0.1" step="0.005" value="0.03">
             </div>
-            
             <div class="setting">
                 <label for="speedSelect">針の速さ</label>
                 <select id="speedSelect">
@@ -165,7 +178,7 @@
                     <option value="0.95">遅い</option>
                 </select>
             </div>
-            </div>
+        </div>
 
     </div>
 
