--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
 
-        /* --- ① メーター (CSS大幅変更) --- */
+        /* --- ① メーター (CSS変更あり) --- */
         .tuner-meter {
             width: 300px;
             height: 150px;
@@ -46,10 +46,9 @@
             border-radius: 150px 150px 0 0;
             position: relative;
             overflow: hidden;
-            /* 中央の線 (box-shadow) を削除 */
         }
 
-        /* ★★★ 新規追加: ① アーチ状のメモリ（ティック線） ★★★ */
+        /* ★★★ 変更点: ① メモリ（ティック線）のCSS ★★★ */
         .meter-arc-marks {
             width: 100%;
             height: 100%;
@@ -57,17 +56,28 @@
             bottom: 0;
             left: 0;
         }
+        /* ティック線の共通スタイル */
         .arc-mark-tick {
-            width: 2px; /* ティックの太さ */
-            height: 15px; /* ティックの長さ */
+            width: 2px;
             background-color: #abb2bf;
             position: absolute;
-            bottom: 135px; /* = (メーター高さ 150px) - (ティック長さ 15px) */
             left: calc(50% - 1px);
             transform-origin: bottom center;
         }
+        /* 短いティック (±10, ±30, ±40) */
+        .tick-short {
+            height: 8px;
+            bottom: 142px; /* 150px - 8px */
+        }
+        /* 長いティック (±20, ±50) */
+        .tick-long {
+            height: 15px;
+            bottom: 135px; /* 150px - 15px */
+        }
+        /* ★★★ (ここまで) ★★★ */
 
-        /* ★★★ 新規追加: ① アーチ状のメモリ（数字） ★★★ */
+
+        /* ★★★ 変更なし: ① メモリ（数字）のCSS ★★★ */
         .meter-arc-numbers {
             width: 100%;
             height: 100%;
@@ -76,11 +86,11 @@
             left: 0;
         }
         .arc-number-container {
-            width: 40px; /* 数字の表示エリア幅 */
-            height: 150px; /* メーターの半径 */
+            width: 40px;
+            height: 150px;
             position: absolute;
             bottom: 0;
-            left: calc(50% - 20px); /* エリア幅の半分 */
+            left: calc(50% - 20px);
             transform-origin: bottom center;
         }
         .arc-mark-number {
@@ -92,34 +102,30 @@
             color: #abb2bf;
             font-size: 0.8rem;
             font-weight: bold;
-            /* 親 (.arc-number-container) の回転を打ち消す
-              (インラインstyleの --un-rotate を参照) 
-            */
             transform: rotate(var(--un-rotate, 0deg));
         }
 
 
-        /* 針 (変更なし) */
+        /* (針, 結果表示, 設定 のCSSは変更なし) */
         .meter-needle {
             width: 2px;
-            height: 140px; /* メモリより少し短く */
+            height: 140px;
             background-color: #e06c75;
             position: absolute;
             bottom: 0;
             left: calc(50% - 1px);
             transform-origin: bottom center;
             transform: rotate(0deg);
-            transition: transform 0.15s ease-out; /* この値はJS側で制御 */
-            z-index: 10; /* メモリより手前に表示 */
+            transition: transform 0.15s ease-out;
+            z-index: 10;
         }
-
-        /* (結果表示, 設定 のCSSは変更なし) */
         #resultDisplay { ... }
         #noteNameDisplay { ... }
         #detuneDisplay { ... }
         .settings { ... }
         .setting { ... }
         select, input[type="range"] { ... }
+
     </style>
 </head>
 <body>
@@ -131,8 +137,7 @@
         <div class="tuner-meter">
             
             <div class="meter-arc-marks">
-                <div class="arc-mark-tick" style="transform: rotate(-45deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-36deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-27deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-18deg);"></div> <div class="arc-mark-tick" style="transform: rotate(-9deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(9deg);"></div>   <div class="arc-mark-tick" style="transform: rotate(18deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(27deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(36deg);"></div>  <div class="arc-mark-tick" style="transform: rotate(45deg);"></div>  </div>
-
+                <div class="arc-mark-tick tick-long"  style="transform: rotate(-45deg);"></div> <div class="arc-mark-tick tick-short" style="transform: rotate(-36deg);"></div> <div class="arc-mark-tick tick-short" style="transform: rotate(-27deg);"></div> <div class="arc-mark-tick tick-long"  style="transform: rotate(-18deg);"></div> <div class="arc-mark-tick tick-short" style="transform: rotate(-9deg);"></div>  <div class="arc-mark-tick tick-short" style="transform: rotate(9deg);"></div>   <div class="arc-mark-tick tick-long"  style="transform: rotate(18deg);"></div>  <div class="arc-mark-tick tick-short" style="transform: rotate(27deg);"></div>  <div class="arc-mark-tick tick-short" style="transform: rotate(36deg);"></div>  <div class="arc-mark-tick tick-long"  style="transform: rotate(45deg);"></div>  </div>
             <div class="meter-arc-numbers">
                 <div class="arc-number-container" style="transform: rotate(-45deg); --un-rotate: 45deg;">
                     <span class="arc-mark-number">-50</span>
