--- a/index.html
+++ b/index.html
@@ -59,25 +59,47 @@
         /* ティック線の共通スタイル */
         .arc-mark-tick {
             width: 2px;
-            background-color: #abb2bf;
+            background-color: #abb2bf; /* 線の色 */
             position: absolute;
             left: calc(50% - 1px);
             transform-origin: bottom center;
+            /* ★★★ 新規追加: 青い点 ★★★ */
+            z-index: 1; /* 数字や針より下に配置 */
         }
+        .arc-mark-tick::before {
+            content: '';
+            display: block;
+            width: 6px; /* 点の直径 */
+            height: 6px;
+            background-color: #61afef; /* 青色 */
+            border-radius: 50%; /* 円形 */
+            position: absolute;
+            bottom: calc(100% + 5px); /* ティック線の上端から少し上に配置 */
+            left: -2px; /* ティック線の中央に合わせる */
+            z-index: 2; /* ティック線より手前 */
+        }
+
         /* 短いティック (±10, ±30, ±40) */
         .tick-short {
-            height: 8px;
-            bottom: 142px; /* 150px - 8px */
+            height: 10px; /* 少し長く */
+            bottom: 140px; /* 150px - 10px */
+        }
+        .tick-short::before {
+             display: none; /* 短いティックには点を表示しない */
         }
         /* 長いティック (±20, ±50) */
         .tick-long {
             height: 15px;
             bottom: 135px; /* 150px - 15px */
         }
-        /* ★★★ (ここまで) ★★★ */
+        /* 中央のティック (0) は特別に長くする */
+        .tick-center {
+            height: 20px; /* 最も長く */
+            bottom: 130px; /* 150px - 20px */
+        }
 
 
-        /* ★★★ 変更なし: ① メモリ（数字）のCSS ★★★ */
+        /* ★★★ 変更点: ① メモリ（数字）のCSS ★★★ */
         .meter-arc-numbers {
             width: 100%;
             height: 100%;
@@ -92,15 +114,16 @@
             bottom: 0;
             left: calc(50% - 20px);
             transform-origin: bottom center;
+            z-index: 3; /* 点より手前に表示 */
         }
         .arc-mark-number {
             display: block;
             width: 100%;
             text-align: center;
             position: absolute;
-            top: 20px; /* 円弧の上端からの距離 */
+            top: 10px; /* 円弧の上端からの距離 (少し上に) */
             color: #abb2bf;
-            font-size: 0.8rem;
+            font-size: 0.9rem; /* 少し大きく */
             font-weight: bold;
             transform: rotate(var(--un-rotate, 0deg));
         }
@@ -137,7 +160,19 @@
         <div class="tuner-meter">
             
             <div class="meter-arc-marks">
-                <div class="arc-mark-tick tick-long"  style="transform: rotate(-45deg);"></div> <div class="arc-mark-tick tick-short" style="transform: rotate(-36deg);"></div> <div class="arc-mark-tick tick-short" style="transform: rotate(-27deg);"></div> <div class="arc-mark-tick tick-long"  style="transform: rotate(-18deg);"></div> <div class="arc-mark-tick tick-short" style="transform: rotate(-9deg);"></div>  <div class="arc-mark-tick tick-short" style="transform: rotate(9deg);"></div>   <div class="arc-mark-tick tick-long"  style="transform: rotate(18deg);"></div>  <div class="arc-mark-tick tick-short" style="transform: rotate(27deg);"></div>  <div class="arc-mark-tick tick-short" style="transform: rotate(36deg);"></div>  <div class="arc-mark-tick tick-long"  style="transform: rotate(45deg);"></div>  </div>
+                <div class="arc-mark-tick tick-long"  style="transform: rotate(-45deg);"></div>
+                <div class="arc-mark-tick tick-short" style="transform: rotate(-36deg);"></div>
+                <div class="arc-mark-tick tick-short" style="transform: rotate(-27deg);"></div>
+                <div class="arc-mark-tick tick-long"  style="transform: rotate(-18deg);"></div>
+                <div class="arc-mark-tick tick-short" style="transform: rotate(-9deg);"></div>
+                <div class="arc-mark-tick tick-center" style="transform: rotate(0deg);"></div>
+                <div class="arc-mark-tick tick-short" style="transform: rotate(9deg);"></div>
+                <div class="arc-mark-tick tick-long"  style="transform: rotate(18deg);"></div>
+                <div class="arc-mark-tick tick-short" style="transform: rotate(27deg);"></div>
+                <div class="arc-mark-tick tick-short" style="transform: rotate(36deg);"></div>
+                <div class="arc-mark-tick tick-long"  style="transform: rotate(45deg);"></div>
+            </div>
+
             <div class="meter-arc-numbers">
                 <div class="arc-number-container" style="transform: rotate(-45deg); --un-rotate: 45deg;">
                     <span class="arc-mark-number">-50</span>
